# mlpredictor

./: .gitignore  README.md  pyproject.toml
mlpredictor/: __init__.py  model.py
mlpredictor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_model.py
